[package]
name = "code_context2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
ignore = "0.4.25"
globset = "0.4.18"
anyhow = "1.0.100"
dirs = "6.0.0"
pathdiff = "0.2.3"
log = "0.4"
env_logger = "0.11.8"
